--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-catch-links": "^2.3.3",
@@ -17,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-sitemap": "^2.4.3",
+    "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-twitter": "^2.3.2",
     "gatsby-remark-autolink-headers": "^2.3.3",
     "gatsby-remark-copy-linked-files": "^2.3.3",
@@ -37,6 +39,7 @@
     "react-helmet": "^6.0.0",
     "react-share": "^4.1.0",
     "react-twitter-widgets": "^1.9.5",
+    "styled-components": "^5.2.0",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
@@ -44,7 +47,7 @@
     "eslint": "^7.1.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.20.0",
     "gh-pages": "^3.0.0",
